--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta charset="utf-8">
 
-<title>Юрчак Ірина</title>
+<title>Гребінь Олекандр-Іван</title>
 
 </head>
 
@@ -15,5 +15,6 @@
 <h1>Моя перша сторінка</h1>
 
 </body>
+
 
 </html>
